# elv-encryption

./: Cargo.toml  README.md  go.mod  go.sum
elv-afgh-rs/: Cargo.toml
elv-afgh-rs/src/: aes.rs  key.rs  lib.rs  main.rs  wasm.rs
elv-encryption-rs/: Cargo.toml
elv-encryption-rs/src/: lib.rs
elv-encryption-rs/src/afgh/: mod.rs  wasm.rs
elv-encryption-rs/src/hpke/: mod.rs  wasm.rs
qafgh/: bench_test.go  gt_compress.go  key.go  qafgh.go  qafgh_gnark.go  qafgh_gnark_test.go  qafgh_test.go  ser.go  ser_test.go  serialization_test.go  util.go
qafgh/gnark/: gnark.go  gnark_test.go  gnark_util.go
qhpke/: qhpke.go  qhpke_test.go
src/: aes.rs  key.rs  lib.rs
