[package]
name = "elv-afgh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
bls12_381 = { version = "0.7.0", package = "bls12_381_plus" }
rand = "0.8"
group = "0.12"
pairing = "0.22"
subtle = "2.4"
thiserror = "1.0"

[features]
