[package]
name = "elv-afgh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.9.4"
bls12_381 = { version = "0.4.2", package = "blstrs" }
rand = "0.8"
group = "0.11"
pairing = "0.21"
subtle = "2.2"
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"

[features]
