[package]
name = "elv-afgh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
bls12_381 = { git = "https://github.com/elv-will/bls12_381" }
rand = { version = "0.8" }
group = "0.12"
pairing = "0.21"
subtle = "2.2"
thiserror = "1.0"
getrandom = {version = "0.2", default-features = false}
cfg-if = "1.0"

# std libs
aes-gcm = { version = "0.9.4", optional = true}
# wasm libs
wasm-bindgen = {version = "0.2", optional = true }

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"

[features]
default = ["std"]
std = ["aes-gcm"]
wasm = ["wasm-bindgen", "getrandom/js"]


[lib]
crate-type = ["cdylib", "rlib"]

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-g', '-O']

